[project]
name = "ansible-dcnm"
version = "3.9.1"
description = "The Ansible Cisco Nexus® Dashboard Fabric Controller (NDFC) (formerly Cisco Data Center Network Manager (DCNM)) collection includes modules to help automate common day 2 operations for VXLAN EVPN fabrics."
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Framework :: Ansible",
]
maintainers = [
    {name = "Miguel Corona"},
    {name = "Charly Coueffe"},
    {name = "Neil John"},
    {name = "M J Mallik"},
    {name = "Praveen Kumar R"},
    {name = "Allen Robel"},
    {name = "Akshayanat C S"},
    {name = "Sivakami Sivaraman"},
    {name = "Matt Tarkington"},
    {name = "Mike Wiebe"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible>=11.11.0",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
]

[project.urls]
Changelog = "https://github.com/CiscoDevNet/ansible-dcnm/blob/develop/CHANGELOG.rst"
Documentation = "https://github.com/CiscoDevNet/ansible-dcnm/blob/develop/README.md"
Homepage = "https://github.com/CiscoDevNet/ansible-dcnm"
Issues = "https://github.com/CiscoDevNet/ansible-dcnm/issues"
Repository = "https://github.com/CiscoDevNet/ansible-dcnm"

[dependency-groups]
test = [
    "deepdiff==8.6.1",
    "pytest>=8.4.2",
    "pytest-xdist>=3.3.1",
    "pytest-cov>=7.0.0",
]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "mdformat>=1.0.0",
    "mypy>=1.0.0",
    "pylint>=3.3.9",
    "yamllint>=1.37.1",
]

[tool.black]
line-length = 160

[tool.isort]
profile = "black"
line_length = 160

[tool.mdformat]
wrap = 160

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "normal"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pyright]
include = ["plugins", "tests"]
exclude = ["**/__pycache__", ".tox", ".venv", "venv"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedVariable = false
reportUnnecessaryTypeIgnoreComment = true
reportGeneralTypeIssues = false
reportCallIssue = false
reportArgumentType = false
strictParameterNoneValue = false
venvPath = "."
venv = ".venv"

[tool.pylint.main]
jobs = 1
limit-inference-results = 100
py-version = "3.11"
fail-under = 10

[tool.pylint.basic]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]
class-attribute-naming-style = "any"
class-const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
docstring-min-length = -1
function-naming-style = "snake_case"
good-names = ["i", "j", "k", "ex", "Run", "_"]
include-naming-hint = false
inlinevar-naming-style = "any"
method-naming-style = "snake_case"
module-naming-style = "snake_case"
no-docstring-rgx = "^_"
property-classes = ["abc.abstractproperty"]
variable-naming-style = "snake_case"

[tool.pylint.classes]
check-protected-access-in-special-methods = false
defining-attr-methods = ["__init__", "__new__", "setUp", "asyncSetUp", "__post_init__"]
exclude-protected = ["_asdict", "_fields", "_replace", "_source", "_make", "os._exit"]
valid-classmethod-first-arg = "cls"
valid-metaclass-classmethod-first-arg = "mcs"

[tool.pylint.design]
max-args = 5
max-attributes = 7
max-bool-expr = 5
max-branches = 12
max-locals = 15
max-parents = 7
max-positional-arguments = 5
max-public-methods = 20
max-returns = 6
max-statements = 50
min-public-methods = 2

[tool.pylint.exceptions]
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]

[tool.pylint.format]
expected-line-ending-format = ""
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
indent-after-paren = 4
indent-string = "    "
max-line-length = 160
max-module-lines = 1000
single-line-class-stmt = false
single-line-if-stmt = false

[tool.pylint.imports]
known-third-party = ["enchant"]

[tool.pylint.logging]
logging-format-style = "old"
logging-modules = ["logging"]

[tool.pylint.messages_control]
confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFINED"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
]

[tool.pylint.method_args]
timeout-methods = [
    "requests.api.delete",
    "requests.api.get",
    "requests.api.head",
    "requests.api.options",
    "requests.api.patch",
    "requests.api.post",
    "requests.api.put",
    "requests.api.request",
]

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX", "TODO"]

[tool.pylint.refactoring]
max-nested-blocks = 5
never-returning-functions = ["sys.exit", "argparse.parse_error"]
suggest-join-with-non-empty-separator = true

[tool.pylint.reports]
score = true
reports = false

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true
min-similarity-lines = 4

[tool.pylint.spelling]
max-spelling-suggestions = 4
spelling-ignore-comment-directives = ["fmt: on", "fmt: off", "noqa:", "noqa", "nosec", "isort:skip", "mypy:"]
spelling-store-unknown-words = false

[tool.pylint.string]
check-quote-consistency = false
check-str-concat-over-line-jumps = false

[tool.pylint.typecheck]
contextmanager-decorators = ["contextlib.contextmanager"]
ignore-none = true
ignore-on-opaque-inference = true
ignored-checks-for-mixins = ["no-member", "not-async-context-manager", "not-context-manager", "attribute-defined-outside-init"]
ignored-classes = ["optparse.Values", "thread._local", "_thread._local", "argparse.Namespace"]
missing-member-hint = true
missing-member-hint-distance = 1
missing-member-max-choices = 1
mixin-class-rgx = ".*[Mm]ixin"

[tool.pylint.variables]
allow-global-unused-variables = true
callbacks = ["cb_", "_cb"]
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
ignored-argument-names = ["_.*", "^ignored_", "^unused_"]
init-import = false
redefining-builtins-modules = ["six.moves", "past.builtins", "future.builtins", "builtins", "io"]
