[project]
name = "ansible-dcnm-setup"
version = "0.1.0"
description = "Install and setup the DCNM Ansible Collection using uv"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Unix Shell",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
maintainers = [
    {name = "Allen Robel"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uv>=0.9.8",
]

[project.urls]
Documentation = "https://github.com/allenrobel/ansible-dcnm-setup/blob/master/README.md"
Homepage = "https://github.com/allenrobel/ansible-dcnm-setup"
Issues = "https://github.com/allenrobel/ansible-dcnm-setup/issues"
Repository = "https://github.com/allenrobel/ansible-dcnm-setup"

[dependency-groups]
dev = [
    "validate-pyproject[all,store]>=0.24.1",
]
